# AnteaterChess

./: .gitignore  CHANGES.txt  CMakeLists.txt  COPYRIGHT  INSTALL  Makefile  README  README.md  REFERENCES.txt  chess_types.h  collanTest.c  eval.c  eval.h
src/: CMakeLists.txt  GameState.h  Piece.h  Square.h  aiUnitTest.c  blunderUnitTest.c  chess  chess.c  chess_sdl.c  chess_test.c  chess_types.c  chess_types.h  eval.c  eval.h  gui.c  gui.h  legalMoveGen.c  legalMoveGen.h  legalMoveGenTest.c  practice  practice.c  strategy.c  strategy.h  strategyTest.c  test  test.c  test.h  test_main.c  textChess.c  textui.c  textui.h
